$Id: History,v 1.23 2000-11-09 18:06:37 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Nov 9th, 2000  G. Cosmo - field-V02-00-01

- G4FieldManager: added check on existence of allocated fChordFinder
  in CreateChordFinder(G4MagneticField*) method.

Nov 1st, 2000  G. Cosmo - field-V02-00-00

- QA code revision and cleanup (+fixes from CodeWizard filtering):
  o Added (private) declarations of copy constructor and assignment operator
    where needed.
  o Added "const" qualifier to accessor methods, wherever needed.
  o Added equality check on operator= where needed.
  o Made destructor "virtual" for classes having virtual methods,
    wherever missing.
  o Changed virtual functions to non-inline wherever's the case.
  o Changed return value to be "const" pointer to functions:
    - G4EquationOfMotion::GetFieldObj()
    - G4FieldManager::GetDetectorField()
    - G4MagIntegratorDriver::GetStepper()
  o Fixed and corrected signature to G4MagIntegratorDriver::SetHmin().
  o Added "inline" qualifier to methods' declarations.
  o General cosmetics

Jun 2nd, 2000  J. Apostolakis
- G4FieldManager[.hh.icc]
  o Added DeltaIntersection and DeltaOneStep to FieldManager: added