@@ -5,30 +5,10 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4FieldTrack.icc,v 1.3 2000-11-01 15:15:49 gcosmo Exp $
+// $Id: G4FieldTrack.icc,v 1.4 2000-11-20 17:29:03 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 #include "PhysicalConstants.h"
-
-inline G4FieldTrack& 
-G4FieldTrack::SetCurvePnt(const G4ThreeVector& pPosition, 
-			  const G4ThreeVector& pVelocity,  // Can be Unit
-			        G4double       s_curve )
-{
-  SixVector[0] = pPosition.x(); 
-  SixVector[1] = pPosition.y(); 
-  SixVector[2] = pPosition.z(); 
-
-  SixVector[3] = pVelocity.x(); 
-  SixVector[4] = pVelocity.y(); 
-  SixVector[5] = pVelocity.z(); 
-
-  fMomentumDir = pVelocity.unit();
-
-  fDistanceAlongCurve= s_curve;
-
-  return *this;
-} 
 
 inline
 G4FieldTrack::G4FieldTrack( const G4ThreeVector& pPosition, 
@@ -49,13 +29,13 @@ G4FieldTrack::G4FieldTrack( const G4ThreeVector& pPosition,
 
 inline
 G4FieldTrack::G4FieldTrack( const G4FieldTrack&  rStVec  )
- : fEnergy( rStVec.fEnergy ),
+ : fDistanceAlongCurve( rStVec.fDistanceAlongCurve),
+   fEnergy( rStVec.fEnergy ),
    fLabTimeOfFlight( rStVec.fLabTimeOfFlight ), 
    fProperTimeOfFlight( rStVec.fProperTimeOfFlight ), 
    fMomentumModulus( rStVec.fMomentumModulus ),
-   fMomentumDir( rStVec.fMomentumDir ),
    fSpin( rStVec.fSpin ), 
-   fDistanceAlongCurve( rStVec.fDistanceAlongCurve)
+   fMomentumDir( rStVec.fMomentumDir )
 {
   SixVector[0]= rStVec.SixVector[0];
   SixVector[1]= rStVec.SixVector[1];
@@ -73,6 +53,26 @@ inline
 G4FieldTrack::~G4FieldTrack()
 {
 }
+
+inline G4FieldTrack& 
+G4FieldTrack::SetCurvePnt(const G4ThreeVector& pPosition, 
+			  const G4ThreeVector& pVelocity,  // Can be Unit
+			        G4double       s_curve )
+{
+  SixVector[0] = pPosition.x(); 
+  SixVector[1] = pPosition.y(); 
+  SixVector[2] = pPosition.z(); 
+
+  SixVector[3] = pVelocity.x(); 
+  SixVector[4] = pVelocity.y(); 
+  SixVector[5] = pVelocity.z(); 
+
+  fMomentumDir = pVelocity.unit();
+
+  fDistanceAlongCurve= s_curve;
+
+  return *this;
+} 
 
 inline
 G4ThreeVector G4FieldTrack::GetPosition() const
